# casadi

casadi/core/: CMakeLists.txt  core.hpp  sensitivity.cpp  sensitivity.hpp
casadi/interfaces/ipopt/: ipopt_interface.hpp
casadi/interfaces/sundials/: kinsol_interface.cpp
casadi/solvers/: sqpmethod.cpp
docs/api/examples/misc/: source.dot
docs/examples/cplusplus/: CMakeLists.txt
docs/examples/cplusplus/cmake_find_package/: CMakeLists.txt  casadi_demo2.cpp  casadi_gjh.cpp  casadi_gjh2.cpp  collocation_example.cpp  cstr_nominal_endo.cpp  cstr_sens.cpp  cstr_sens_dummy.cpp  cstr_test.cpp  cstr_v1.cpp  cstr_v2.cpp  direct_collocation.cpp  ipopt_multiplier_example.cpp  paper_example_module.cpp  paper_example_sens.cpp  paper_example_sens_v2.cpp  paper_example_sens_v3.cpp  paper_example_sens_v4.cpp  paper_example_sens_v4clean.cpp
docs/examples/cplusplus/scenariogen/: CMakeLists.txt  controller_cstr.cpp  controller_cstr_3c.cpp  controller_cstr_3c_nmpc.cpp  controller_cstr_3c_nmpc_modularize.cpp  cstr_3c.cpp  cstr_3c_backup.cpp  cstr_3c_v1.cpp  cstr_3c_v2.cpp  cstr_9c.cpp  cstr_index.cpp  cstr_sens.cpp  cstr_sens_3c.cpp  cstr_sens_3c_v1.cpp  cstr_sens_3c_v1_dg.cpp  cstr_sens_3c_whole.cpp  cstr_sens_9c.cpp  quadtank_nom.cpp
docs/examples/cplusplus/scenariogen/min-max/: CMakeLists.txt  full_tree_3c.cpp
docs/examples/cplusplus/scenariogen/mymodel/: CMakeLists.txt  approx_multistage_3c.cpp  approx_multistage_9c.cpp  basic_nlp_helper.cpp  controller_cstr_3c_nmpc_modularize.cpp  cstr_model.cpp  cstr_model.hpp  min_max_3c.cpp  minmax_helper.cpp  multistage_3c.cpp  multistage_3c_cfps.cpp  multistage_helper.cpp  nominal_module.cpp  nominal_only.cpp  plant.cpp  scenario_gen.cpp  scenario_gen_helper.cpp  scenario_gen_helper_nowc.cpp
experimental/: CMakeLists.txt
test/python/: nlp.py
